syntax = "proto3";

package common;

message MachineId {
  string id = 1;
}

message MachineIdList {
  repeated MachineId machine_ids = 1;
}

// A list of strings
// This is different than "repeated string" since using StringList
// allows to express a nullable/optional list
message StringList {
  repeated string items = 1;
}

message UUID {
  string value = 1;
}

message Uint32List {
  repeated uint32 items = 1;
}

message RouteTarget {
  uint32 asn = 1;
  uint32 vni = 2;
}